# bandsaw

./: README.md
bandsaw/: .cvsignore  ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  autogen.sh  configure  configure.ac  configure.in
bandsaw/data/: .cvsignore  bandsaw.desktop  bandsaw.desktop.in  bandsaw.schemas
bandsaw/etc/: bandsaw.conf
bandsaw/help/: Makefile.am
bandsaw/help/C/: bandsaw.xml
bandsaw/help/bandsaw/C/: .cvsignore  Makefile.am  bandsaw-C.omf  bandsaw.xml  bandsaw.xml.in
bandsaw/src/: bandsaw.glade  bandsaw.gladep  bandsaw.py  bandsaw_test.py  bandsawconfig.py.in
htdocs/: .screenshots.html.swp  Makefile  download.html  feedback.html  index.html  news.html  screenshots.html  syslog.html
htdocs/images/ss/: trayicon.xcf
htdocs/news/: 20040622.html  20040626.html  20040716.html  20040731.html  20040802.html  20060307.html  20060308.html  20060309.html
htdocs/ssi/: copyright.html  navbar.html  sidebar.html
